--- a/Toursim_Static_Website-main/index.html
+++ b/Toursim_Static_Website-main/index.html
@@ -13,7 +13,7 @@
     <div id="sectionHome">
         <div class="bg-container d-flex flex-column justify-content-end">
             <div class="tourism-card">
-                <h1 class="main-heading"> Hemanth Tourism</h1>
+                <h1 class="main-heading"> Shiva Tourism</h1>
                 <p class="paragraph">Plan your trip.</p>
                 <button class="button" onclick="display('sectionFavouritePlaces')">
                     Get Started
